--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
-2.0: base
+2.0: 新版本推出
 2.0.1:
-修复了更换用户后「刷新」无用，必须「强制刷新」然后再「刷新」方能生效的问题
+- 修复了更换用户后「刷新」无用，必须「强制刷新」然后再「刷新」方能生效的问题
+- 修复了localStroage的安全性问题
