--- a/public/_locales/zh_CN/messages.json
+++ b/public/_locales/zh_CN/messages.json
@@ -56,6 +56,9 @@
   "ClearDataDialog_Title": {
     "message": "清除所有缓存"
   },
+  "Common_Back": {
+    "message": "返回"
+  },
   "Common_Cancel": {
     "message": "取消"
   },
@@ -327,7 +330,7 @@
     "message": "未知错误"
   },
   "LoginDialog_Content": {
-    "message": "请输入您的学号/用户名和密码以登录到网络学堂。 <br /> 请注意，本插件默认不会保存您的凭据；每次打开新的学堂助手页面时，您都需要重新输入。 如果您选择保存凭据，则本插件会将其 <b>保存在本地</b> ，并启用自动登录功能。 <br /> 我们对凭据进行了简单的加密，但并不能完全防止其被第三方读取。 在长时间不使用或者出借计算机时，请务必退出登录，以免您的凭据被泄露。 <br /> 如果您选择登录，则视为您已经阅读并同意 <a href=\"src/about.html\" target=\"_blank\"> 此页面 </a> 中的所有内容。 否则，请立刻停止使用并从浏览器中卸载本插件。"
+    "message": "请输入您的学号/用户名和密码以登录到网络学堂。 <br /> 请注意，本插件默认不会保存您的凭据；每次打开新的学堂助手页面时，您都需要重新输入。 如果您选择保存凭据，则本插件会将其 <b>保存在本地</b> ，并启用自动登录功能。 <br /> 我们对凭据进行了简单的加密，但并不能完全防止其被第三方读取。 在长时间不使用或者出借计算机时，请务必退出登录，以免您的凭据被泄露。 <br /> 如果您选择登录，则视为您已经阅读并同意 <a href=\"about.html\" target=\"_blank\"> 此页面 </a> 中的所有内容。 否则，请立刻停止使用并从浏览器中卸载本插件。"
   },
   "LoginDialog_Password": {
     "message": "密码"
@@ -466,6 +469,15 @@
   },
   "Summary_Question": {
     "message": "所有答疑"
+  },
+  "Welcome_About": {
+    "message": "关于我们"
+  },
+  "Welcome_Changelog": {
+    "message": "更新记录"
+  },
+  "Welcome_Readme": {
+    "message": "使用手册"
   },
   "appDesc": {
     "message": "清华大学网络学堂助手，集中展示课程公告、作业、DDL等信息，提供一站式服务"
