--- a/src/locales/zh.po
+++ b/src/locales/zh.po
@@ -131,7 +131,6 @@ msgid "标记为未读"
 msgstr "标记为未读"
 
 #: src/components/ContentCard.tsx:174
-#: src/constants/ui.tsx:156
 msgid "标记为已读"
 msgstr "标记为已读"
 
@@ -539,6 +538,10 @@ msgstr "讨论"
 #: src/constants/ui.tsx:76
 msgid "答疑"
 msgstr "答疑"
+
+#: src/constants/ui.tsx:156
+msgid "全部标记已读"
+msgstr "全部标记已读"
 
 #: src/constants/ui.tsx:163
 msgid "手动刷新"
